--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +51,10 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "typescript": "^4.9.5"
+    "autoprefixer": "^10.0.0",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.0.0",
+    "typescript": "^4.9.5",
+    "postcss-loader": "^6.2.1"
   }
 }
