--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.15.1",
     "ws": "^8.18.0"
   },
@@ -30,6 +31,6 @@
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "typescript": "^5.7.3"
+    "typescript": "^4.9.5"
   }
 }
